added proper links

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 
     <nav>
-        <p><span>ClaudiaArias</span> <a href="/">ROCK PAPER SCISSORS</a></p>
+        <p><span>ClaudiaArias</span> <a href="/index.html">ROCK PAPER SCISSORS</a></p>
 
         <ul>
             <ul>
                 <li><a href="./pages/instructions.html">Instructions</a></li>
                 <li><a href="/pages/about.html">About</a></li>
                 <li><a href="/pages/contact.html">Contact</a></li>
-                <li><a href="/">More Games</a></li>
+                <li><a href="/index.html">More Games</a></li>
             </ul>
         </ul>
     </nav>
