--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <nav>
-        <p><span>ClaudiaArias</span> <a href="/">ROCK PAPER SCISSORS</a></p>
+        <p><span>ClaudiaArias</span> <a href="../index.html">ROCK PAPER SCISSORS</a></p>
 
         <ul>
             <ul>
                 <li><a href="./instructions.html">Instructions</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
-                <li><a href="/">More Games</a></li>
+                <li><a href="../index.html">More Games</a></li>
             </ul>
         </ul>
     </nav>
