--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             <div id="container">
                 <div id="choices-container">
                     <div id="rock">
-                        <button onClick="playRound(this.value)" value="rock" class="uc" id="rock-btn">rock</button>
+                        <button onClick="playRound(this.value)" value="rock" class="uc" id="rock-btn"></button>
                     </div>
                     <div id="paper">
-                        <button onClick="playRound(this.value)" value="paper" class="uc" id="paper-btn">paper</button>
+                        <button onClick="playRound(this.value)" value="paper" class="uc" id="paper-btn"></button>
                     </div>
                     <div id="scissors">
-                        <button onClick="playRound(this.value)" value="scissors"  class="uc" id="scissors-btn">scissors</button>
+                        <button onClick="playRound(this.value)" value="scissors"  class="uc" id="scissors-btn"></button>
                     </div>
                 </div>
             </div>
